--- a/server/config.json
+++ b/server/config.json
@@ -20,5 +20,6 @@
     "cors": false,
     "handleErrors": false
   },
-  "legacyExplorer": false
+  "legacyExplorer": false,
+  "logoutSessionsOnSensitiveChanges": true
 }
