Journey, Match, and Team models
create models with properties (without relations and acls)

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -69,5 +69,17 @@
   "Competition": {
     "dataSource": "db",
     "public": true
+  },
+  "journey": {
+    "dataSource": "db",
+    "public": true
+  },
+  "match": {
+    "dataSource": "db",
+    "public": true
+  },
+  "team": {
+    "dataSource": "db",
+    "public": true
   }
 }
